<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/med_spring_green">
    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vertical_guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".25"/>
    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/small_length"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".10"
        android:background="@color/pale_turquoise"
        android:text="@string/greeting5"
        android:gravity="center"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="@dimen/small_length"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greeting"
        android:text="@string/like_label"
        android:background="@color/med_aqua_marine"
        android:layout_marginTop="@dimen/margin_top"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/med_length"
        android:layout_height="@dimen/med_length"
        android:text="@string/layout_label_3"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/med_purple"
        android:id="@+id/place"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/med_length"
        android:layout_height="@dimen/med_length"
        android:text="@string/accomplishment_label"
        app:layout_constraintLeft_toLeftOf="@id/vertical_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@color/navy"
        android:textColor="@color/white"
        android:id="@+id/bot"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/previous"
        app:layout_constraintTop_toBottomOf="@+id/place"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bot"
        android:text="previous"
        android:onClick="goPrev"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next"
        app:layout_constraintTop_toBottomOf="@+id/place"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/previous"
        app:layout_constraintBottom_toTopOf="@id/bot"
        android:text="next"
        android:onClick="goNext"/>
</androidx.constraintlayout.widget.ConstraintLayout>